# oraculum

./: .env.sample  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  docker-compose.yml  pre-commit-config.yaml  pyproject.toml  teste.py
alembic/: env.py
alembic/versions/: 2341bb52c168_add_fk_grades_to_players.py  2944de044d9f_add_autoincrement_to_player_id_for_tests.py  507e2504f298_teste.py  5fdae641dd0f_teste2.py  6e91cee0bdff_refactoring_pks.py  a288c90cb135_add_grades_table.py  f5654acb05a2_add_fk_players_races.py
src/infra/configs/: connection.py  session.py
src/infra/entities/: models.py
src/infra/repositories/: grade.py  player.py  race.py  testing.py
src/infra/repositories/errors/: grade.py  player.py  race.py
tests/: generate_data.py
tests/test_repositories/: test_grade.py  test_player.py  test_race.py
