[tool.poetry]
name = "oraculum"
version = "0.1.0"
description = ""
authors = ["João Victor Inocêncio Macedo de Aguiar <macdjoao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
blue = "^0.9.1"
isort = "^5.12.0"
pre-commit = "^3.3.2"
sqlalchemy = "^2.0.15"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
